app/assets/stylesheets/videos_new.css
.very-wide-box {
  width: 1000px;
  text-align: center;
  height: 80px;
  position: relative;
  overflow: visible; }

#outer-video-box { overflow: visible; position: relative; }

#outer-video-box.sticky { 
  position: fixed; 
  bottom: 210px; }

#copy-and-paste-box {
  margin-top: 150px; }

.language-option {
  color: black; }

.video-container {
  margin-left: 80px;
  margin-right: 40px;
  float: left; }

.lyrics-container {
  margin-left: 5px; 
  margin-top: 5px; 
  float: left; 
  width: 380px; }

.lyrics-container.sticky {
  margin-left: 555px; }

.lyrics-container.wide { 
  width: 600px;
  margin-left: 40px; 
  margin-top: 0px; 
  float: left; }

.center-pill {
  margin-right: auto; 
  margin-left: auto; 
  width: 142px;
  text-align: center; }

.center-pill-wide {
  margin-right: auto; 
  margin-left: auto; 
  width: 212px;
  text-align: center; }

.language-video-option {
  text-align: left; }

.language-translation-option {
  text-align: left; }

#timer-box { position: absolute;
  left: -45px;
  top: 90px; }

#timer {  width: 90px;
  height: 90px;
  border-radius: 45px;
  background-color: #9B59BB;
  text-align: center; }

#big-timer {  color: white;
  line-height: 90px; }

#controls { position: relative; }

#slider { width: 150px; float: left; margin-top: 6px; }
#loop-slider { width: 222px; float: right; margin: 6px; }
.ui-slider-handle { width: 30px!important; text-align: center; }

#revise-timing-done { float: left; }
#editing-line-done { margin-left: 5px; }

.rounded { margin-right: 10px; border-radius: 10px !important; }
  
#red-arrow {  position: absolute; top: 110px; left: 320px; }
#red-arrow.shifted { left: 290px; }

#red-arrow-text-box {
  position: absolute;
  top: 90px;
  left: 365px;
  height: 20px; 
  width: 200px; }
#red-arrow-text-box.shifted { left: 335px; }

#language-options {
  margin-left: auto;
  margin-right: auto;
  width: 160px;
  text-align: left; }

#request-options {
  margin-left: auto;
  margin-right: auto;
  width: 160px;
  text-align: left; }

.text-padding {
  margin: 3px;
  text-align: center; }

